(executables
    (names test_spsc_queue_sequential)
    (modules test_spsc_queue_sequential)
    (libraries spsc_queue unix))

(executables
    (names test_spsc_queue_parallel)
    (modules test_spsc_queue_parallel)
    (libraries spsc_queue unix))

(executables
    (names test_spsc_queue_pingpong)
    (modules test_spsc_queue_pingpong)
    (libraries spsc_queue unix))

(executables
    (names test_queue_parallel)
    (modules test_queue_parallel)
    (libraries ms_queue unix))

(executables
    (names test_queue_sequential)
    (modules test_queue_sequential)
    (libraries ms_queue unix))

(library
    (name spsc_queue)
    (modules spsc_queue))

(library 
    (name ms_queue)
    (modules ms_queue))

(library 
    (name treiber_stack)
    (modules treiber_stack))

(executables
    (names test_stack_parallel)
    (modules test_stack_parallel)
    (libraries treiber_stack unix))

(executables
    (names test_stack_sequential)
    (modules test_stack_sequential)
    (libraries treiber_stack unix))

(alias (name buildmultibench) (deps test_spsc_queue_sequential.exe test_spsc_queue_parallel.exe test_spsc_queue_pingpong.exe test_queue_parallel.exe test_stack_parallel.exe test_stack_sequential.exe))
